add skeleton for authentication

--- a/ExtraMessenger/appsettings.json
+++ b/ExtraMessenger/appsettings.json
@@ -1,10 +1,13 @@
 {
+  "AppSettings": {
+    "Secret": ")@!(U)@!UD)(*JQD(J9qw0qwue98quwe8q W9aisdjioiUJHUHu89hq0we89hqaiosdhujghn"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
