--- a/ExtraMessenger/ClientApp/package.json
+++ b/ExtraMessenger/ClientApp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "11.2.0",
     "@angular/platform-server": "11.2.0",
     "@angular/router": "11.2.0",
+    "@aspnet/signalr": "^1.1.4",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.0",
