--- a/ExtraMessenger/appsettings.json
+++ b/ExtraMessenger/appsettings.json
@@ -1,10 +1,16 @@
 {
+  "MongoDBSettings": {
+    "UserCollectionName": "Users",
+    "ChatColletionName": "ChatInteraction",
+    "ConnectionString": "http://localhost:27017",
+    "DatabaseName": "ExtraMessengerDB"
+  },
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
