--- a/ExtraMessenger/ClientApp/package.json
+++ b/ExtraMessenger/ClientApp/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-server": "11.2.0",
     "@angular/router": "11.2.0",
     "@aspnet/signalr": "^1.1.4",
+    "@auth0/angular-jwt": "^5.0.2",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "alertifyjs": "^1.13.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.6.0",
     "core-js": "^3.8.3",
