--- a/ExtraMessenger/appsettings.json
+++ b/ExtraMessenger/appsettings.json
@@ -2,7 +2,7 @@
   "MongoDBSettings": {
     "UserCollectionName": "Users",
     "ChatColletionName": "ChatInteraction",
-    "ConnectionString": "http://localhost:27017",
+    "ConnectionString": "mongodb://127.0.0.1:27017/?compressors=disabled&gssapiServiceName=mongodb",
     "DatabaseName": "ExtraMessengerDB"
   },
   "AppSettings": {
