--- a/ExtraMessenger/ExtraMessenger.csproj
+++ b/ExtraMessenger/ExtraMessenger.csproj
@@ -25,6 +25,7 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="ClientApp\src\assets\images\" />
     <Folder Include="Services\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
