Added fetchrepo component, Neo4J and code for github authorize

--- a/ExtraMessenger/appsettings.json
+++ b/ExtraMessenger/appsettings.json
@@ -15,5 +15,17 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Neo4JDB": "http://localhost:7474/"
+  },
+  "Neo4JTestSettingsL": {
+    "Username": "neo4j",
+    "Pass": "test"
+  },
+  "GithubOAuth": {
+    "ClientId": "e91a927d4e52b1d3f0e1",
+    "ClientSecret": "beabab57ff03265200d91fb2e87574b59b2ed519",
+    "AppHeader":  "Extra Messenger Header Info"
+  }
 }
