--- a/ExtraMessenger/ExtraMessenger.csproj
+++ b/ExtraMessenger/ExtraMessenger.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.8.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.11.6" />
     <PackageReference Include="MongoDB.Driver" Version="2.11.6" />
+    <PackageReference Include="Neo4jClient" Version="4.1.1" />
+    <PackageReference Include="Octokit" Version="0.50.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.1" />
