Fixed errors on front, bug with post Bearer

--- a/ExtraMessenger/appsettings.json
+++ b/ExtraMessenger/appsettings.json
@@ -26,6 +26,6 @@
   "GithubOAuth": {
     "ClientId": "e91a927d4e52b1d3f0e1",
     "ClientSecret": "beabab57ff03265200d91fb2e87574b59b2ed519",
-    "AppHeader":  "Extra Messenger Header Info"
+    "AppHeader":  "Extra-Messenger-Header-Info"
   }
 }
