--- a/ExtraMessenger/appsettings.json
+++ b/ExtraMessenger/appsettings.json
@@ -2,6 +2,9 @@
   "MongoDBSettings": {
     "UserCollectionName": "Users",
     "ChatColletionName": "ChatInteraction",
+    "ReposCollectionName": "Repos",
+    "TutorialsCollectionName": "Tutorials",
+    "IssuesCollectionName": "Issues",
     "ConnectionString": "mongodb://127.0.0.1:27017",
     "DatabaseName": "ExtraMessengerDB"
   },
