Fixed fetch for Neo4J and Mongo, changed GithubClientService to Singleton

--- a/ExtraMessenger/appsettings.json
+++ b/ExtraMessenger/appsettings.json
@@ -5,6 +5,7 @@
     "ReposCollectionName": "Repos",
     "TutorialsCollectionName": "Tutorials",
     "IssuesCollectionName": "Issues",
+    "OGitAuthCollectionName": "OGitAuth",
     "ConnectionString": "mongodb://127.0.0.1:27017",
     "DatabaseName": "ExtraMessengerDB"
   },
