--- a/ExtraMessenger/appsettings.json
+++ b/ExtraMessenger/appsettings.json
@@ -3,7 +3,7 @@
     "UserCollectionName": "Users",
     "ChatColletionName": "ChatInteraction",
     "ReposCollectionName": "Repos",
-    "TutorialsCollectionName": "Tutorials",
+    "TicketsCollectionName": "Tickets",
     "IssuesCollectionName": "Issues",
     "OGitAuthCollectionName": "OGitAuth",
     "ConnectionString": "mongodb://127.0.0.1:27017",
